Fix layer of search types list and change align of its items

--- a/src/app/position/position-profile/position-profile.component.scss
+++ b/src/app/position/position-profile/position-profile.component.scss
@@ -126,10 +126,12 @@
   box-shadow: 0 1px 2px 1px $gray;
   bottom: -100px;
   background: $white;
+  z-index: 1;
 
   li {
-    padding: 10px 5px;
+    padding: 10px;
     cursor: pointer;
+    text-align: left;
 
     &:hover {
       background: $dirty-blue;
